j--/tests/pass/MinusAssign.java
package pass;

public class MinusAssign {
	public int eval(int a, int b) {
		a -= b;
		return a;
	}
}
