j--/tests/fail/MinusAssign.java
package fail;

public class MinusAssign {

	public static void main(String args[]) {
		System.out.println("c" -= "b");
	}

}
